Processes are now started with process builder and input and error streams are combined. Corrected bug with duration of clips after probing.